--- a/res/menu/timeline.xml
+++ b/res/menu/timeline.xml
@@ -1,16 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <!--
 	<item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/action_refresh"/>
+    //-->
     <item
         android:id="@+id/action_new"
         android:orderInCategory="110"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_new"
         android:title="@string/action_new"/>
-
+    <item
+        android:id="@+id/action_profile"
+        android:orderInCategory="120"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_profile"
+        android:title="@string/action_profile"/>
+    
 </menu>
